<resources>
    <string name="app_name">ParkIt</string>

    <string name="enter_email">Enter email address</string>
    <string name="enter_password">Enter password</string>
    <string name="verify_password">Re-enter password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>