<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/login_IMG_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="32dp"

        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        />

    <TextView
        android:id="@+id/login_LBL_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@id/login_IMG_logo"
        android:layout_alignLeft="@id/login_EDT_email"
        android:layout_marginBottom="12dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_EDT_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/login_LBL_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="12"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_EDT_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/login_EDT_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        android:layout_marginBottom="2dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/login_CB_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Remember me"
        android:layout_below="@id/login_EDT_password"
        android:layout_alignLeft="@id/login_EDT_password"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_BTN_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_CB_remember"
        app:cornerRadius="50dp"
        android:ems="10"
        app:icon="@drawable/icon_login"
        app:iconGravity="textStart"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/login_BTN_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_BTN_login"
        app:cornerRadius="50dp"
        android:ems="10"
        android:text="@string/register" />

    <TextView
        android:id="@+id/login_LBL_parkit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="Park It!"
        android:textColor="#FF5722"
        android:textSize="24dp"
        android:textStyle="bold"/>

</RelativeLayout>