<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/register_IMG_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/login_logo"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="32dp"
        />

    <TextView
        android:id="@+id/register_LBL_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_below="@id/register_IMG_logo"
        android:layout_alignLeft="@id/register_EDT_email"
        android:layout_marginBottom="12dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_EDT_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/register_LBL_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_email"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusTopStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="12"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_EDT_password1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/register_EDT_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        android:layout_marginBottom="16dp"
        app:placeholderText="+972 55 1234567"
        app:boxCornerRadiusTopStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_EDT_password2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/register_EDT_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/verify_password"
        android:layout_marginBottom="16dp"
        app:placeholderText="+972 55 1234567"
        app:boxCornerRadiusTopStart="13dp"
        app:boxCornerRadiusTopEnd="13dp"
        app:boxCornerRadiusBottomStart="13dp"
        app:boxCornerRadiusBottomEnd="13dp"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="12"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_BTN_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_EDT_password2"
        app:cornerRadius="50dp"
        android:ems="10"
        android:text="@string/register" />

    <TextView
        android:id="@+id/register_LBL_parkit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="Park It!"
        android:textColor="#FF5722"
        android:textSize="24dp"
        android:textStyle="bold"/>

</RelativeLayout>